--- a/styles.css
+++ b/styles.css
@@ -117,16 +117,15 @@
         margin: 0;
         width: 100%;
         position: absolute;
-        /*top: -1000px;
+        top: -1000px;
         opacity: 0;
-        */
         transition: all 0.5s ease;
         height: 50vh;
         z-index: -1;
         background-color: #131313;
     }
 
-    .navbar-menu:active {
+    .navbar-menu.active {
         background-color: #131313;
         top: 100%;
         opacity: 1;
@@ -156,7 +155,7 @@
         text-align: center;
         padding: 2rem;
         width: 100%;
-        display: 100%;
+        display: flex;
     }
 
     #mobile-menu {
@@ -164,5 +163,35 @@
         top: 20%;
         right: 5%;
         transform: translate(5%, 20%);
+    }
+
+    .navbar-btn {
+        padding-bottom: 2rem;
+    }
+
+    .button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        height: 50px;
+        margin: 0;
+    }
+
+    .navbar-toggle .bar {
+        display: block;
+        cursor: pointer;
+    }
+
+    #mobile-menu.is-active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    #mobile-menu.is-active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg); 
+    }
+
+    #mobile-menu.is-active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
     }
 }
