--- a/styles.css
+++ b/styles.css
@@ -361,3 +361,102 @@ body {
         margin: 2.5rem 0;
     }
 }
+
+/* Services Section CSS */
+
+.services {
+    background-color: #141414;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.services h1 {
+    background-color: #ff8177;
+    background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 70%, #b12ab5 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    background-size: 100%;
+    margin-bottom: 5rem;
+    font-size: 2.5rem;
+}
+
+.services-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.services-card {
+    margin: 1rem;
+    height: 525px;
+    width: 400px;
+    border-radius: 4px;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(17, 17, 17, 0.6) 100%), url('images/whiteguy.jpg');
+    background-size: cover;
+    position: relative;
+    color: #fff;
+}
+
+.services-card:nth-child(2) {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(17, 17, 17, 0.6) 100%), url('images/blackguy.jpg');
+}
+
+.services h2 {
+    position: absolute;
+    top: 350px;
+    left: 30px;
+}
+
+.services-card p {
+    position: absolute;
+    top: 400px;
+    left: 30px;
+}
+
+.services-card button {
+    position: absolute;
+    top: 440px;
+    left: 30px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f77062;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.services-card:hover {
+    transform: scale(1.075);
+    transition: 0.2s ease-in;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 960px)
+{
+    .services {
+        height: 1600px;
+    }
+
+    .services h1 {
+        font-size: 2rem;
+        margin-top: 12rem;
+    }
+}
+
+@media screen and (max-width: 960px){
+    .services {
+        height: 1400px;
+    }
+
+    .services h1 {
+        font-size: 1.2rem;
+    }
+
+    .services-card {
+        width: 300px;
+    }
+}
