--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,6 @@
     font-family: 'Kumbh Sans', sans-serif;
 }
 
-body {
-    background-color: #141414;
-}
-
 .navbar {
     background-color: #131313;
     height: 80px;
@@ -317,7 +313,6 @@ body {
 
     .main-content h1 {
         font-size: 2.5rem;
-        margin-top: 2rem;
     }
 
     .main-content h2 {
@@ -344,7 +339,6 @@ body {
 {
         .main-content h1 {
         font-size: 2.5rem;
-        margin-top: 2rem;
     }
 
     .main-content h2 {
@@ -458,5 +452,138 @@ body {
 
     .services-card {
         width: 300px;
+    }
+}
+
+/* Footer Section CSS */
+.footer-container {
+    background-color: #141414;
+    padding: 5rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#footer-logo {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
+}
+
+.footer-links {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-link-wrapper {
+    display: flex;
+}
+
+.footer-link-items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 16px;
+    text-align: left;
+    width: 160px;
+    box-sizing: border-box;
+}
+
+.footer-link-items h2 {
+    margin-bottom: 16px;
+}
+
+.footer-link-items > h2 {
+    color: #fff;
+}
+
+.footer-link-items a {
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 0.5rem;
+}
+
+.footer-link-items a:hover {
+    color: #e9e9e9;
+    transition: 0.3s ease-out;
+}
+
+/* Social icons */
+.social-icon-link {
+    color: #fff;
+    font-size: 24px;
+}
+
+.social-media {
+    max-width: 1000px;
+    width: 100%;
+}
+
+.social-media-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 1000px;
+    margin: 40px auto 0 auto;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 240px;
+}
+
+.social-logo {
+    color: #fff;
+    justify-self: self-start;
+    margin-left: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
+.website-rights {
+    color: #fff;
+}
+
+@media screen and (max-width: 820px) {
+    .footer-links {
+        padding-top: 2rem;
+    }
+
+    #footer-logo {
+        margin-bottom: 2rem;
+    }
+
+    .website-rights {
+        margin-bottom: 2rem;
+    }
+
+    .footer-link-wrapper {
+        flex-direction: column;
+    }
+
+    .social-media-wrap {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 480px)
+{
+    .footer-link-items {
+        margin: 0;
+        padding: 10px;
+        width: 100%;
     }
 }
